# dyret_controller

./: CMakeLists.txt  README.md  package.xml
cfg/: gaitControllerParams.cfg
launch/: fullController.launch
msg/: DistAngCommand.msg  DistAngMeasurement.msg  GaitConfiguration.msg  GaitControllerCommand.msg  PositionCommand.msg  Trajectory.msg
src/: dyret_logger.cpp  gaitController.cpp  gaitEvaluator.cpp  inverseKinematicsAdapter.cpp  inverseKinematicsService.cpp  robotConstants.h  trajectoryController.cpp
src/gait/: BSplineGait.cpp  BSplineGait.h  GaitSegment.cpp  GaitSegment.h  gait.cpp  gait.h  wagGenerator.h
src/kinematics/: IncPoseAdjuster.cpp  IncPoseAdjuster.h  forwardKinematics.cpp  forwardKinematics.h  interpolation.cpp  interpolation.h  inverseKinematics.cpp  inverseKinematics.h  kinematicFunctions.cpp  kinematicFunctions.h  kinematicTypes.h  movementFunctions.cpp  movementFunctions.h  testKinematics.cpp
src/states/: poseAdjustState.h  trajectoryControllerState.h
srv/: ConfigureGait.srv  GaitControllerCommandService.srv  GetGaitEvaluation.srv  GetInferredPosition.srv  SendPositionCommand.srv
