<?xml version="1.0"?>
<package>
  <name>dyret_controller</name>
  <version>0.2.0</version>
  <description>The dyret_controller package</description>

  <maintainer email="tonnesfn@ifi.uio.no">tonnesfn</maintainer>
  <license>GPL-3.0-or-later</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dyret_common</build_depend>
  <build_depend>dyret_hardware</build_depend>
  <build_depend>std_srvs</build_depend>

  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
